fix navbar collapse issue on mobile and change colors of nav links and dropdown to blueish color from white so that they're visible and add bootstrap gem

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -712,7 +712,7 @@ body, .main p {
 
 	.navbar-custom .navbar-toggler {
 		border: none;
-		color: #fff;
+		color: #b5bcc4;
 		font-size: 2rem;
 	}
 
@@ -733,7 +733,6 @@ body, .main p {
 		margin-right: 0.125rem;
 	}
 }
-
 
 /*********************/
 /*    04. Header     */
@@ -1085,5 +1084,15 @@ body, .main p {
 	}
 	.btn-solid-lg {
 		margin-top: 1em;
+	}
+}
+
+@media(max-width: 576px) {
+	.main {
+		.navbar-custom {
+			.nav-item .nav-link, .dropdown-item {
+				color: #2373BF;
+			}
+		}
 	}
 }
